--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,14 @@
 ---
 
 - hosts: all
+  vars:
+    ansible_python_interpreter: /usr/bin/env python3
   become: true
   roles:
     - system_common
+
+- hosts: all
+  vars:
+    ansible_python_interpreter: /usr/bin/env python3
+  roles:
+    - user
