--- a/roles/system_common/tasks/packages.yml
+++ b/roles/system_common/tasks/packages.yml
@@ -8,6 +8,7 @@
       - build-essential
       - curl
       - git
+      - imagemagick
       - libffi-dev
       - libgdbm-dev
       - libncurses5-dev
