--- a/roles/system_common/tasks/packages.yml
+++ b/roles/system_common/tasks/packages.yml
@@ -10,6 +10,8 @@
       - ffmpeg
       - git
       - imagemagick
+      - libcurl4
+      - libcurl4-openssl-dev
       - libffi-dev
       - libgdbm-dev
       - libncurses5-dev
@@ -17,6 +19,7 @@
       - libreadline-dev
       - libssl-dev
       - libyaml-dev
+      - python2
       - python3
       - python3-pip
       - python3-tmuxp
