--- a/roles/system_common/tasks/packages.yml
+++ b/roles/system_common/tasks/packages.yml
@@ -23,6 +23,7 @@
       - python3
       - python3-pip
       - python3-tmuxp
+      - silversearcher-ag
       - vim-gui-common
       - wget
       - xclip
