--- a/roles/user/tasks/node.yml
+++ b/roles/user/tasks/node.yml
@@ -13,4 +13,5 @@
 
 - name: install yarn
   shell: >
-    . {{ ansible_env.HOME }}/.nvm/nvm.sh && npm install yarn
+    . {{ ansible_env.HOME }}/.nvm/nvm.sh && npm install --global yarn
+
