--- a/roles/system_common/tasks/packages.yml
+++ b/roles/system_common/tasks/packages.yml
@@ -32,6 +32,7 @@
       - python3
       - python3-pip
       - python3-tmuxp
+      - python3-virtualenv
       - ripgrep
       - silversearcher-ag
       - strace
